# rust-esp32s3-lvgl-clickme

./: .gitattributes  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
custom-fonts/: gotham_bold_80.c  gotham_bold_80.h
lvgl-configs/: lv_conf.h  lv_drv_conf.h
partition-table/: partitions.csv
src/: gt911.rs  lcd_panel.rs  main.rs
